--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,52 @@ body {
   overflow: hidden;
   padding-top: 10px;
 }
+
+/************************************************************************/
+/*						FOR SIDE-FACTS									*/
+/************************************************************************/
+#statistik-nilai-rataan-diterima-tertinggi {font-family: Arial;}
+/* Style the tab */
+.tab#statistik-nilai-rataan-diterima-tertinggi-tab{
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab#statistik-nilai-rataan-diterima-tertinggi-tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab#statistik-nilai-rataan-diterima-tertinggi-tab button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab#statistik-nilai-rataan-diterima-tertinggi-tab button.active {
+    background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+    animation: fadeEffect 1s; /* Fading effect takes 1 second */
+    overflow-y: scroll;
+}
+
+/* Go from zero to full opacity */
+@keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
