--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,41 @@ body {
   overflow: hidden;
   padding-top: 10px;
 }
+
+.frame {
+  width: 60%;
+  height: 200px;
+  padding: 0;
+  border: 1px solid gray;
+}
+
+.frame .slidee {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  list-style: none;
+}
+
+.frame .slidee li {
+  float: left;
+  margin: 0 5px 0 0;
+  padding: 0;
+  width: 240px;
+  height: 100%;
+}
+
+.scrollbar {
+  width: 640px;
+  height: 5px;
+}
+
+.scrollbar .handle {
+  width: 100px;
+  /* overriden if dynamicHandle: 1 */
+  height: 100%;
+  background: #888;
+}
+
+.active {
+	background: #aabbcc;
+}
