--- a/picto/style.css
+++ b/picto/style.css
@@ -4,6 +4,27 @@ body {
   font-size: 24px;
 }
 
+.univ {
+  color: #555555;
+  font-family: 'Segoe UI Light';
+  margin-bottom: 10px;
+}
+
+.prodi {
+  font-size: 16px;
+  color: #555555;
+  font-family: 'Segoe UI Light';
+  margin-bottom: 2px;
+}
+
+#success-rate {
+  font-size: 14px;
+  color: #555555;
+  font-family: 'Segoe UI Light';
+  text-align: right;
+  margin-bottom: 20px;
+}
+
 .picto {
   border-radius: 5px;
   width: 20px;
@@ -16,22 +37,22 @@ body {
   float: right;
 }
 
-#success-rate {
-  font-size: 14px;
-}
-
-#expected, #unexpected {
+#expected {
   text-align: center;
   float: left;
+  margin-left: 3px;
 }
 
 #unexpected {
-  margin-left: 1px;
+  text-align: center;
+  float: right;
+  margin-right: 3px;
 }
 
 #unexpected-content {
   /*background-color: #FFDBE1;*/
   text-align: center;
+  width: 125px;
 }
 
 /*#unexpected-content .picto {
@@ -59,17 +80,4 @@ body {
 label {
   margin-bottom: 0px;
   display: block;
-}
-
-.univ {
-  color: #555555;
-  font-family: 'Segoe UI Light';
-  margin-bottom: 10px;
-}
-
-.prodi {
-  font-size: 16px;
-  color: #555555;
-  font-family: 'Segoe UI Light';
-  margin-bottom: 16px;
 }
