--- a/picto/style.css
+++ b/picto/style.css
@@ -14,15 +14,17 @@ body {
   font-size: 16px;
   color: #555555;
   font-family: 'Segoe UI Light';
-  margin-bottom: 2px;
+  margin-bottom: 20px;
 }
 
-#success-rate {
-  font-size: 14px;
+.success-rate {
+  font-size: 20px;
   color: #555555;
   font-family: 'Segoe UI Light';
-  text-align: right;
+  text-align: center;
   margin-bottom: 20px;
+  display: inline-block;
+  width: 100%;
 }
 
 .picto {
@@ -41,12 +43,14 @@ body {
   text-align: center;
   float: left;
   margin-left: 3px;
+  display:block;
 }
 
 #unexpected {
   text-align: center;
   float: right;
   margin-right: 3px;
+  display: block;
 }
 
 #unexpected-content {
