--- a/css/style.css
+++ b/css/style.css
@@ -91,3 +91,93 @@ body {
     to {opacity: 1;}
 }
 
+/*****************************************/
+/**************for pictograph*************/
+/*****************************************/
+body {
+  /*font-family: 'Segoe UI Light', sans-serif;*/
+  font-family: Calibri, sans-serif;
+  font-size: 24px;
+}
+
+.univ {
+  color: #555555;
+  font-family: 'Segoe UI Light';
+  margin-bottom: 10px;
+}
+
+.prodi {
+  font-size: 16px;
+  color: #555555;
+  font-family: 'Segoe UI Light';
+  margin-bottom: 20px;
+}
+
+.success-rate {
+  font-size: 20px;
+  color: #555555;
+  font-family: 'Segoe UI Light';
+  text-align: center;
+  margin-bottom: 20px;
+  display: inline-block;
+  width: 100%;
+}
+
+.picto {
+  border-radius: 5px;
+  width: 20px;
+  height: 40px;
+  display: inline-block;
+  margin: 2px;
+}
+
+#picto {
+  float: right;
+}
+
+#expected {
+  text-align: center;
+  float: left;
+  margin-left: 3px;
+  display:block;
+  width: 25%
+}
+
+#unexpected {
+  text-align: center;
+  float: right;
+  margin-right: 3px;
+  display: block;
+  width: 67.5%;
+}
+
+#unexpected-content {
+  /*background-color: #FFDBE1;*/
+  text-align: center;
+}
+
+/*#unexpected-content .picto {
+  background-color: #BE7DFF;
+}*/
+
+#expected-content {
+  text-align: center;
+  /*background-color: #F9F2FF;*/
+/*  border: 2px solid #EAD9FA;
+  border-radius: 6px;
+*/}
+
+#expected label {
+  color: #BE7DFF;
+  font-size: 12px;
+}
+
+#unexpected label {
+  color: #FF0000;
+  font-size: 12px;
+}
+
+label {
+  margin-bottom: 0px;
+  display: block;
+}
