Integrate nvd3 graph data

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,10 @@ body {
 }
 
 .is-vertical-center {
-  margin: 10px 20px 10px 50px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1em;
+  margin-top: 1em;
 }
 
 .active {
