--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ svg.nvd3-svg {
 	cursor: pointer;
 	padding-right: 0.5em;
 	font-size: 2rem;
+	color: #555555;
 }
 
 .borderless-medium {
@@ -76,6 +77,7 @@ svg.nvd3-svg {
 	cursor: pointer;
 	padding-right: 1em;
 	font-size: 1.8rem;
+	color: #555555;
 }
 
 
@@ -91,6 +93,7 @@ svg.nvd3-svg {
 	cursor: pointer;
 	padding-right: 1em;
 	font-size: 1.8em;
+	color: #555555;
 }
 
 .spinner {
